--- a/client/src/components/home/homeitems/our-services/OurServices.css
+++ b/client/src/components/home/homeitems/our-services/OurServices.css
@@ -44,7 +44,7 @@
 .our-services .container-cards {
     margin: 25px 0;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
@@ -53,22 +53,26 @@
     padding: 15px;
 }
 
-.our-services .container-cards .card:nth-child(1) {
+.our-services .container-cards .card:nth-child(1),
+.our-services .container-cards .card:nth-child(4) {
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
     position: relative;
     left: 289px;
+    /* left: 0; */
     visibility: hidden;
     opacity: 0;
     transition: .3s visibility, .3s opacity, .7s left;
     transition-delay: .3s;
 }
 
-.our-services .container-cards .card:nth-child(4) {
+.our-services .container-cards .card:nth-child(3),
+.our-services .container-cards .card:nth-child(6) {
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     position: relative;
     right: 289px;
+    /* right: 0; */
     visibility: hidden;
     opacity: 0;
     transition: .3s visibility, .3s opacity, .7s right;
@@ -76,13 +80,15 @@
 
 }
 
-.our-services .container-cards .card:nth-child(1).active {
+.our-services .container-cards .card:nth-child(1).active,
+.our-services .container-cards .card:nth-child(4).active {
     visibility: visible;
     opacity: 1;
     left: 0;
 }
 
-.our-services .container-cards .card:nth-child(4).active {
+.our-services .container-cards .card:nth-child(3).active,
+.our-services .container-cards .card:nth-child(6).active {
     visibility: visible;
     opacity: 1;
     right: 0;
@@ -90,8 +96,6 @@
 
 .our-services .container-cards .card:nth-child(2),
 .our-services .container-cards .card:nth-child(3) {
-    /* visibility: hidden; */
-    /* opacity: 0; */
     transition: .3s visibility, .3s opacity;
 }
 
