--- a/client/src/components/home/homeitems/Hotdeal/Hotdeal.css
+++ b/client/src/components/home/homeitems/Hotdeal/Hotdeal.css
@@ -1,5 +1,5 @@
-.hot-deal,
-.fashionn {
+.deals {
+    /* background-color: #06090d; */
     /* background-image: url(../../../../assets/hotdeal.jpg); */
     background:
         linear-gradient(rgba(0, 0, 0, 0.8),
@@ -13,46 +13,10 @@
     z-index: 333;
     display: grid;
     gap: 25px;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 1fr;
     padding: 50px 15px;
 }
 
-.hot-deal .special-items {
-    /* background-color: #1f93ff; */
-    /* background-color: #0f5069e8; */
-    background-color: #19252c;
-    /* background-color: #05bbfe; */
-    /* background-color: #477cff; */
-    height: fit-content;
-}
-
-.special-items .item {
-    width: 100%;
-    display: flex;
-    /* justify-content: space-between; */
-    /* justify-content: space-between; */
-    font-size: 1rem;
-    margin-bottom: 20px;
-    padding: 10px;
-    position: relative;
-
-}
-
-.special-items .item::after {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #477cff;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.special-items .item img {
-    width: 70px;
-    height: 70px;
-    margin-right: 25px;
-}
 
 /* ////////////////////// */
 .add {
@@ -78,20 +42,22 @@
 
 
 .deals .carousel .cards {
-    display: flex;
-    justify-content: space-evenly;
+    /* display: flex; */
+    /* justify-content: space-evenly; */
     height: 270px;
-    /* display: grid; */
-    /* gap: 10px; */
-    /* grid-template-columns: 250px, 250px, 250px, 250px; */
+    display: grid;
+    gap: 30px;
+    padding: 10px 5rem;
+    grid-template-columns: 280px 280px 280px 280px;
     /* width: 100%; */
 }
 
 .deals .carousel .cards .card {
-    width: 250px;
-    height: 280px;
+    /* width: 250px; */
+    /* height: 280px; */
     /* background-color: rgb(54, 59, 65); */
     background-color: rgb(25, 80, 105, 0.7);
+    background-color: rgba(30, 30, 30, 0.7);
     color: white;
     text-align: center;
 }
