--- a/client/src/components/store/Store.css
+++ b/client/src/components/store/Store.css
@@ -90,7 +90,7 @@
 }
 
 .products {
-    background-image: url(../images/About-Us-BG-1.png);
+    background-image: url(../../assets/About-Us-BG-1.png);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
